[package]
name = "medieval-realms-server"
version = "0.1.0"
authors = ["Jon Jekeli <jon@marxent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "*"
env_logger="*"
chrono="*"
warp = "0.1.20"
log = "0.4.6"
uuid = { version = "0.7", features = ["serde", "v4"] }
diesel = { version = "1.4.0", features = ["r2d2", "postgres", "serde_json"] }
bcrypt = "0.5.0"
rand = "0.7.0"
data-encoding = "*"
ring = "*"
